- Pill Domain 구현 (미완성 / 01)