@@ -1,26 +1,20 @@
-package me.cutehammond.pill.global.oauth.domain;
+package me.cutehammond.pill.global.oauth.entity;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 import me.cutehammond.pill.domain.user.domain.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.oauth2.core.oidc.OidcIdToken;
-import org.springframework.security.oauth2.core.oidc.OidcUserInfo;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @Getter
-@RequiredArgsConstructor
-@AllArgsConstructor
-public final class UserPrincipal implements OAuth2User, UserDetails, OidcUser {
+@RequiredArgsConstructor(access = AccessLevel.PRIVATE)
+@AllArgsConstructor(access = AccessLevel.PRIVATE)
+public final class UserPrincipal implements UserDetails, OAuth2User {
 
     private final String userId;
     private final String password;
@@ -62,21 +56,6 @@ public final class UserPrincipal implements OAuth2User, UserDetails, OidcUser {
     }
 
     @Override
-    public Map<String, Object> getClaims() {
-        return null;
-    }
-
-    @Override
-    public OidcUserInfo getUserInfo() {
-        return null;
-    }
-
-    @Override
-    public OidcIdToken getIdToken() {
-        return null;
-    }
-
-    @Override
     public Map<String, Object> getAttributes() {
         return attributes;
     }
@@ -92,8 +71,8 @@ public final class UserPrincipal implements OAuth2User, UserDetails, OidcUser {
     }
 
     public static UserPrincipal create(User user) {
-        return new UserPrincipal(user.getUserId(), user.getPassword(), user.getProvider(), Role.DEFAULT_USER,
-                Collections.singletonList(new SimpleGrantedAuthority(Role.DEFAULT_USER.getKey())));
+        return new UserPrincipal(user.getUserId(), "", user.getProvider(), Role.DEFAULT_USER,
+                List.of(new SimpleGrantedAuthority(Role.DEFAULT_USER.getKey())));
     }
 
     public static UserPrincipal create(User user, Map<String, Object> attributes) {
